# qpOASES

./: CMakeLists.txt  README.md  package.xml  setup.py
include/qpOASES/: MessageHandling.hpp
interfaces/python/: qpoases.cpp  qpoases.pxd  qpoases.pyx
src/: Matrices.cpp  MessageHandling.cpp  QProblem.cpp  QProblemB.cpp  SQProblem.cpp
